test/zinc_source/compile_errors/functions/13_spread_collection_method.zn
// expected-error: array\.push\(\) does not accept named arguments

struct Args {
    value: i64
}

fn main() {
    args = Args { value: 1 }
    values = []
    values.push(..args)
}
